WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
46902
SVGFECompositeElement doesn't support dynamic invalidation
https://bugs.webkit.org/show_bug.cgi?id=46902
Summary
SVGFECompositeElement doesn't support dynamic invalidation
Renata Hodovan
Reported
2010-09-30 08:25:31 PDT
SVGFECompositeElement doesn't support dynamic invalidation
Attachments
Patch for feComposite properties
(1.02 MB, patch)
2010-09-30 09:19 PDT
,
Renata Hodovan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Renata Hodovan
Comment 1
2010-09-30 09:19:30 PDT
Created
attachment 69340
[details]
Patch for feComposite properties
Dirk Schulze
Comment 2
2010-09-30 09:48:16 PDT
Comment on
attachment 69340
[details]
Patch for feComposite properties Really interesting tests. Normally I would prefer a limit number of involved effects, on the other side, we can catch more kind of errors. r=me
WebKit Commit Bot
Comment 3
2010-09-30 10:21:35 PDT
Comment on
attachment 69340
[details]
Patch for feComposite properties Clearing flags on attachment: 69340 Committed
r68797
: <
http://trac.webkit.org/changeset/68797
>
WebKit Commit Bot
Comment 4
2010-09-30 10:21:42 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug